Add final plots

--- a/python/DynamicStudy.ipynb
+++ b/python/DynamicStudy.ipynb
@@ -35,14 +35,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_spectrum(spectrum, polar=True, title=\"\", log=False, ax=None):\n",
+    "def plot_spectrum(spectrum, polar=True, title=\"\", log=False, ax=None, ylabels=True):\n",
     "    if polar:\n",
     "        if ax is None:\n",
     "            fig, ax = plt.subplots(subplot_kw={\"projection\": \"polar\"})\n",
     "        else:\n",
     "            fig = plt.gcf()\n",
     "            \n",
-    "        plot_polar(BeamFormer.theta_scan, spectrum, ax, log=log)\n",
+    "        plot_polar(BeamFormer.theta_scan, spectrum, ax, log=log, ylabels=ylabels)\n",
     "        #plt.polar(BeamFormer.theta_scan, spectrum[0, :])\n",
     "        for source in sources:\n",
     "            angle = np.arctan2(source[1], source[0])\n",
@@ -65,7 +65,7 @@
     "    return fig, ax\n",
     "\n",
     "\n",
-    "def plot_polar(angles, spectrum, ax, log=False, angle_gt=None, **plot_kwargs):\n",
+    "def plot_polar(angles, spectrum, ax, log=False, angle_gt=None, ylabels=True, **plot_kwargs):\n",
     "    from matplotlib.ticker import FormatStrFormatter\n",
     "    \n",
     "    assert spectrum.shape[0] == 1\n",
@@ -91,7 +91,9 @@
     "        yticklabels = yticklabels[-5::2]\n",
     "        ax.set_yticks(yticks)\n",
     "        ax.set_yticklabels(yticklabels)\n",
-    "    ax.set_xticklabels([])"
+    "    ax.set_xticklabels([])\n",
+    "    if not ylabels:\n",
+    "        ax.set_yticklabels([])"
    ]
   },
   {
@@ -272,8 +274,8 @@
     "source_distance = 2 # not actually used, since we use farfield assumption\n",
     "signal_noise = 1e-3  # 1e-2\n",
     "\n",
-    "method = \"das\"; log = False\n",
-    "#method = \"mvdr\"; log=True\n",
+    "#method = \"das\"; log = False\n",
+    "method = \"mvdr\"; log=True\n",
     "\n",
     "dir_name = \"plots_doa/theory\"\n",
     "\n",
@@ -540,7 +542,7 @@
     "        )\n",
     "\n",
     "        if plot:\n",
-    "            fig, ax = plot_spectrum(spec, polar=True, title=\"raw spectra\", log=log, ax=ax)\n",
+    "            fig, ax = plot_spectrum(spec, polar=True, title=\"raw spectra\", log=log, ax=ax, ylabels=False)\n",
     "            fig.set_size_inches(3, 3)\n",
     "\n",
     "    spectrum_dynamic = beam_former.get_dynamic_estimate()\n",
@@ -549,11 +551,11 @@
     "    if plot:\n",
     "        save_fig(fig, f\"{dir_name}/raw{extension}\")\n",
     "\n",
-    "        fig, ax = plot_spectrum(spectrum_dynamic, polar=True, title=\"angle shift\", log=log)\n",
+    "        fig, ax = plot_spectrum(spectrum_dynamic, polar=True, title=\"angle shift\", log=log, ylabels=False)\n",
     "        fig.set_size_inches(3, 3)\n",
     "        save_fig(fig, f\"{dir_name}/angle{extension}\")\n",
     "\n",
-    "        fig, ax = plot_spectrum(spectrum_delayed, polar=True, title=\"time shift\", log=log)\n",
+    "        fig, ax = plot_spectrum(spectrum_delayed, polar=True, title=\"time shift\", log=log, ylabels=False)\n",
     "        fig.set_size_inches(3, 3)\n",
     "        save_fig(fig, f\"{dir_name}/time{extension}\")\n",
     "        \n",
@@ -571,7 +573,7 @@
     "                R, np.array([frequency_hz]), inverse=\"pinv\"\n",
     "            )\n",
     "        if plot:\n",
-    "            fig, ax = plot_spectrum(spectrum, polar=True, title=f\"drone rotation {degree}deg\", log=log)\n",
+    "            fig, ax = plot_spectrum(spectrum, polar=True, title=f\"drone rotation {degree}deg\", log=log, ylabels=False)\n",
     "            fig.set_size_inches(3, 3)\n",
     "                \n",
     "def multi_mic_doa(plot=False, polar=True, extension=\".pdf\"):\n",
@@ -591,7 +593,8 @@
     "\n",
     "    if plot:\n",
     "        fig, ax = plot_spectrum(\n",
-    "            spectrum_multimic, polar=True, title=f\"{mics_array.shape[0]}-microphone array\", log=log\n",
+    "            spectrum_multimic, polar=True, title=f\"{mics_array.shape[0]}-microphone array\", log=log,\n",
+    "            ylabels=False\n",
     "        )\n",
     "        fig.set_size_inches(3, 3)\n",
     "        save_fig(fig, f\"{dir_name}/multimic{extension}\")\n",
@@ -654,7 +657,7 @@
     "from constants import SPEED_OF_SOUND\n",
     "from geometry import Context\n",
     "from plotting_tools import save_fig\n",
-    "from generate_doa_results import GT_ANGLE_DEG, get_movement\n",
+    "from generate_doa_results import get_movement\n",
     "\n",
     "frequency_desired = 4000 # in hz, will be changed to available frequency bin\n",
     "signal_noise = 1e-3  # 1e-2\n",
@@ -664,8 +667,9 @@
     "source_distance = 1 # in meters\n",
     "freq_index, frequency_hz = get_frequency(frequency_desired)\n",
     "\n",
-    "#method = \"das\"; log = False\n",
-    "method = \"mvdr\"; log=True\n",
+    "method = \"das\"; log = False\n",
+    "#method = \"mvdr\"; log=True\n",
+    "\n",
     "dir_name = \"plots_doa/simulation\"\n",
     "\n",
     "label = str.upper(method)\n",
@@ -683,7 +687,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gt_angles_deg = [GT_ANGLE_DEG]  # degrees, angle of source\n",
+    "gt_angles_deg = [130]  # degrees, angle of source\n",
     "phase_offsets = [0.0]  # phase offsets of each source\n",
     "\n",
     "angular_velocity_deg = 30  # deg/sec, angular velocity of drone\n",
@@ -829,62 +833,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from plotting_tools import save_fig\n",
+    "from generate_doa_results import move_mics, get_noisy_times\n",
     "np.random.seed(10)\n",
     "\n",
     "frequency_desired = 4000\n",
     "freq_index, frequency_hz = get_frequency(frequency_desired)\n",
     "method = \"das\"; log=False\n",
-    "#method = \"mvdr\"; log=True\n",
+    "#method = \"mvdr\"; True\n",
     "\n",
-    "#source_type = \"uniform2\"  # 2, 3 good, 4 ok, 5 broken\n",
-    "source_type = \"close40\" # 10, 20 no, 30 ok, 40 good\n",
-    "if \"close\" in source_type:\n",
-    "    delta = int(source_type.split(\"close\")[-1])\n",
-    "    gt_angles_deg = [100, 100+delta]  # , 180, 270]\n",
-    "elif \"uniform\" in source_type:\n",
-    "    n = int(source_type.split(\"uniform\")[-1])\n",
-    "    # with 40 it is ok, with 50 it is better! find out why\n",
-    "    gt_angles_deg = np.arange(10, 360, step=360/n)\n",
-    "    gt_angles_deg += np.random.normal(scale=5)\n",
-    "else:\n",
-    "    raise ValueError(soure_type)\n",
-    "phase_offsets = np.random.uniform(0, 2 * np.pi, size=len(gt_angles_deg))\n",
+    "source_type = \"uniform2\"  # 2, 3 good, 4 ok, 5 broken\n",
+    "#source_type = \"close40\" # 10, 20 no, 30 ok, 40 good\n",
+    "for source_type in [f\"uniform{i}\" for i in range(2, 6)] + [f\"close{i}\" for i in [20, 30, 40]]:\n",
+    "    if \"close\" in source_type:\n",
+    "        delta = int(source_type.split(\"close\")[-1])\n",
+    "        gt_angles_deg = [100, 100+delta]  # , 180, 270]\n",
+    "    elif \"uniform\" in source_type:\n",
+    "        n = int(source_type.split(\"uniform\")[-1])\n",
+    "        # with 40 it is ok, with 50 it is better! find out why\n",
+    "        gt_angles_deg = np.arange(10, 360, step=360/n)\n",
+    "        gt_angles_deg += np.random.normal(scale=5)\n",
+    "    else:\n",
+    "        raise ValueError(soure_type)\n",
+    "    phase_offsets = np.random.uniform(0, 2 * np.pi, size=len(gt_angles_deg))\n",
     "\n",
-    "angular_velocity_deg = 20  # deg/sec, angular velocity of drone\n",
-    "linear_velocity_cm = 0 # cm/sec, linear velocity\n",
-    "sampling_time = 1.0\n",
-    "n_samples = 3\n",
+    "    angular_velocity_deg = 20  # deg/sec, angular velocity of drone\n",
+    "    linear_velocity_cm = 0 # cm/sec, linear velocity\n",
+    "    sampling_time = 1.0\n",
+    "    n_samples = 3\n",
     "\n",
-    "degree_noise = 0 #1 # 5 # noise added to each movement, in degrees\n",
-    "offset_noise = 1e-3 #1e-2 # in m\n",
-    "time_quantization = 6  # number of decimal places to keep\n",
-    "time_noise = 0 #1e-6  # 1e-6 # noise added to recording times"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from plotting_tools import save_fig\n",
-    "from generate_doa_results import move_mics, get_noisy_times\n",
+    "    degree_noise = 0 #1 # 5 # noise added to each movement, in degrees\n",
+    "    offset_noise = 1e-3 #1e-2 # in m\n",
+    "    time_quantization = 6  # number of decimal places to keep\n",
+    "    time_noise = 0 #1e-6  # 1e-6 # noise added to recording times\n",
     "\n",
-    "sources = get_source(gt_angles_deg, degrees=True)\n",
-    "degrees, offsets, times_list = get_movement(angular_velocity_deg, linear_velocity_cm, n_samples, sampling_time)\n",
     "\n",
-    "mics_list = move_mics(mics_local, degrees, offsets, {\"degree\": degree_noise, \"offset\": offset_noise})\n",
-    "mics_clean = move_mics(mics_local, degrees, offsets)\n",
-    "times_list_noisy = get_noisy_times(times_list, time_noise)\n",
+    "    ################################\n",
     "\n",
-    "fig = plot_setup(degrees, mics_list, sources)\n",
-    "save_fig(fig, f\"{dir_name}/setup_{source_type}.pdf\")\n",
+    "    sources = get_source(gt_angles_deg, degrees=True)\n",
+    "    degrees, offsets, times_list = get_movement(angular_velocity_deg, linear_velocity_cm, n_samples, sampling_time)\n",
     "\n",
-    "buffer_f_list, buffer_f_multimic = get_buffers(\n",
-    "    mics_list, times_list, frequency_hz, simulation_type, noise=signal_noise\n",
-    ")\n",
-    "multi_mic_doa(plot=True, extension=f\"_{source_type}_{method}.pdf\")\n",
-    "kinetic_doa(plot=True, extension=f\"_{source_type}_{method}.pdf\")"
+    "    mics_list = move_mics(mics_local, degrees, offsets, {\"degree\": degree_noise, \"offset\": offset_noise})\n",
+    "    mics_clean = move_mics(mics_local, degrees, offsets)\n",
+    "    times_list_noisy = get_noisy_times(times_list, time_noise)\n",
+    "\n",
+    "    fig = plot_setup(degrees, mics_list, sources)\n",
+    "    save_fig(fig, f\"{dir_name}/setup_{source_type}.pdf\")\n",
+    "\n",
+    "    buffer_f_list, buffer_f_multimic = get_buffers(\n",
+    "        mics_list, times_list, frequency_hz, simulation_type, noise=signal_noise\n",
+    "    )\n",
+    "    multi_mic_doa(plot=True, extension=f\"_{source_type}_{method}.pdf\")\n",
+    "    kinetic_doa(plot=True, extension=f\"_{source_type}_{method}.pdf\")"
    ]
   },
   {
@@ -900,49 +900,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "method = \"mvdr\"; log=True\n",
-    "#method = \"das\"; log=False\n",
-    "\n",
-    "gt_angles_deg = [GT_ANGLE_DEG]  # degrees, angle of source\n",
-    "phase_offsets = [0.0]  # phase offsets of each source\n",
-    "\n",
-    "\n",
-    "angular_velocity_deg = 0  # deg/sec, angular velocity of drone\n",
-    "linear_velocity_cm = 50 # cm/sec, linear velocity # 2, 4 ok, 6 okish, 8 broken\n",
-    "sampling_time = 0.5\n",
-    "n_samples = 3\n",
-    "\n",
-    "degree_noise = 1 # 5 # noise added to each movement, in degrees\n",
-    "offset_noise = 1e-2 # in m\n",
-    "time_quantization = 6  # number of decimal places to keep\n",
-    "time_noise = 1e-6  # 1e-6 # noise added to recording times"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from plotting_tools import save_fig\n",
     "from generate_doa_results import move_mics, get_noisy_times\n",
+    "#method = \"mvdr\"; log=True\n",
+    "method = \"das\"; log=False\n",
     "\n",
-    "sources = get_source(gt_angles_deg, degrees=True)\n",
-    "degrees, offsets, times_list = get_movement(angular_velocity_deg, linear_velocity_cm, n_samples, sampling_time)\n",
+    "for vel in [10, 30, 50]:\n",
+    "    gt_angles_deg = [50]  # degrees, angle of source\n",
+    "    phase_offsets = [0.0]  # phase offsets of each source\n",
     "\n",
-    "# create noisy versions\n",
-    "mics_list = move_mics(mics_local, degrees, offsets, {\"degree\": degree_noise, \"offset\": offset_noise})\n",
-    "mics_clean = move_mics(mics_local, degrees, offsets)\n",
-    "times_list_noisy = get_noisy_times(times_list, time_noise)\n",
+    "    angular_velocity_deg = 0  # deg/sec, angular velocity of drone\n",
+    "    linear_velocity_cm = vel # cm/sec, linear velocity # 50 broken\n",
+    "    sampling_time = 0.5\n",
+    "    n_samples = 3\n",
     "\n",
-    "fig = plot_setup(degrees, mics_list, sources)\n",
-    "save_fig(fig, f\"{dir_name}/setup_lateral{linear_velocity_cm}.pdf\")\n",
+    "    degree_noise = 1 # 5 # noise added to each movement, in degrees\n",
+    "    offset_noise = 1e-3 # in m\n",
+    "    time_quantization = 6  # number of decimal places to keep\n",
+    "    time_noise = 1e-6  # 1e-6 # noise added to recording times\n",
     "\n",
-    "buffer_f_list, buffer_f_multimic = get_buffers(\n",
-    "    mics_list, times_list, frequency_hz, simulation_type, noise=signal_noise\n",
-    ")\n",
-    "multi_mic_doa(plot=True, extension=f\"_lateral{linear_velocity_cm}_{method}.pdf\")\n",
-    "kinetic_doa(plot=True, extension=f\"_lateral{linear_velocity_cm}_{method}.pdf\")"
+    "    sources = get_source(gt_angles_deg, degrees=True)\n",
+    "    degrees, offsets, times_list = get_movement(angular_velocity_deg, linear_velocity_cm, n_samples, sampling_time)\n",
+    "\n",
+    "    # create noisy versions\n",
+    "    mics_list = move_mics(mics_local, degrees, offsets, {\"degree\": degree_noise, \"offset\": offset_noise})\n",
+    "    mics_clean = move_mics(mics_local, degrees, offsets)\n",
+    "    times_list_noisy = get_noisy_times(times_list, time_noise)\n",
+    "\n",
+    "    fig = plot_setup(degrees, mics_list, sources)\n",
+    "    save_fig(fig, f\"{dir_name}/setup_lateral{linear_velocity_cm}.pdf\")\n",
+    "\n",
+    "    buffer_f_list, buffer_f_multimic = get_buffers(\n",
+    "        mics_list, times_list, frequency_hz, simulation_type, noise=signal_noise\n",
+    "    )\n",
+    "    multi_mic_doa(plot=True, extension=f\"_lateral{linear_velocity_cm}_{method}.pdf\")\n",
+    "    kinetic_doa(plot=True, extension=f\"_lateral{linear_velocity_cm}_{method}.pdf\")"
    ]
   },
   {
@@ -980,12 +972,15 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from generate_doa_results import GT_ANGLE_DEG\n",
     "\n",
     "label_list = [\"spectrum_dynamic\", \"spectrum_delayed\", \"spectrum_multimic\"]\n",
     "\n",
-    "#fname = 'results/doa_degree_noise.pkl'; plot_by = \"degree_noise\"; unit=\"deg\"\n",
-    "fname = 'results/doa_lateral_movement.pkl'; plot_by = \"linear_velocity_cm\"; unit=\"cm/s\"\n",
+    "#GT_ANGLE_DEG = 50\n",
+    "#fname = 'results/doa_lateral_movement.pkl'; plot_by = \"linear_velocity_cm\"; unit=\"cm/s\"\n",
+    "\n",
+    "GT_ANGLE_DEG = 130\n",
+    "fname = 'results/doa_degree_noise.pkl'; plot_by = \"degree_noise\"; unit=\"deg\"\n",
+    "\n",
     "#fname = 'results/doa_time_noise.pkl'; plot_by = \"time_noise\"; unit=\"s\"\n",
     "df = pd.read_pickle(fname)\n",
     "\n",
@@ -1042,6 +1037,7 @@
     "    ax_box[l].boxplot(boxplot_mat[l], positions=range(len(noise_levels)), widths=0.8)\n",
     "    ax_box[l].set_xticklabels([f\"{n:.1g}\" for n in noise_levels], rotation=90)\n",
     "    ax_box[l].set_title(label)\n",
+    "    #ax_box[l].set_yscale('log')\n",
     "    ax_box[l].set_xlabel(f\"{plot_by.replace('_', ' ')}[{unit}]\")\n",
     "ax_box[0].set_ylabel(\"absolute error [deg]\")"
    ]
@@ -1060,7 +1056,7 @@
    "outputs": [],
    "source": [
     "def plot_pivot_table(df, column=\"time_noise\", index=\"frequency\", \n",
-    "                     values=\"spectrum_delayed\", log=False):\n",
+    "                     values=\"spectrum_delayed\", log=False, labels=[\"mean\"], saveas=\"\"):\n",
     "\n",
     "    from plotting_tools import pcolorfast_custom, add_colorbar\n",
     "\n",
@@ -1083,9 +1079,8 @@
     "    tb = pd.pivot_table(data=df, values=values, index=index, \n",
     "                        columns=column,\n",
     "                        aggfunc=[mean, std]) #{\"mean\": mean,  \"std\": std})\n",
-    "    print(tb)\n",
     "\n",
-    "    for label in [\"mean\", \"std\"]:\n",
+    "    for label in labels:\n",
     "        tb_mean = tb.iloc[:, tb.columns.get_level_values(0)==label]\n",
     "        noises = tb_mean.columns.get_level_values(1)\n",
     "        \n",
@@ -1110,22 +1105,25 @@
     "            ax.set_ylabel(index.replace(\"_\", \" \"))\n",
     "            \n",
     "        ax.set_title(label + \" of angle error (deg)\")\n",
+    "        \n",
+    "        if saveas != \"\":\n",
+    "            save_fig(fig, f\"plots_doa/simulation/{saveas}_{label}.pdf\")\n",
     "\n",
     "# this one is also okay!\n",
-    "fname = 'results/doa_lateral_movement.pkl'\n",
-    "df = pd.read_pickle(fname)\n",
-    "plot_pivot_table(df, column=\"linear_velocity_cm\", log=False)\n",
+    "#fname = 'results/doa_lateral_movement.pkl'\n",
+    "#df = pd.read_pickle(fname)\n",
+    "#plot_pivot_table(df, column=\"linear_velocity_cm\", log=False, saveas=\"lateral_movement\")\n",
     "\n",
     "# this one is okay!\n",
     "#fname = 'results/doa_time_noise.pkl'\n",
     "#fname = 'results/doa_time_noise_higher.pkl'\n",
     "#df = pd.read_pickle(fname)\n",
-    "#plot_pivot_table(df, column=\"time_noise\")\n",
+    "#plot_pivot_table(df, column=\"time_noise\", saveas=\"time_noise\")\n",
     "\n",
     "# this one is okay!\n",
-    "# fname = 'results/doa_degree_noise.pkl'\n",
-    "# df = pd.read_pickle(fname)\n",
-    "# plot_pivot_table(df, column=\"degree_noise\")"
+    "fname = 'results/doa_degree_noise.pkl'\n",
+    "df = pd.read_pickle(fname)\n",
+    "plot_pivot_table(df, column=\"degree_noise\", saveas=\"degree_noise\")"
    ]
   },
   {
