Add more simulation results

--- a/python/WallStudy.ipynb
+++ b/python/WallStudy.ipynb
@@ -1223,11 +1223,11 @@
     "def get_cos_amplitudes(distances_cm):\n",
     "    from simulation import WALL_ABSORPTION, GAIN\n",
     "    from simulation import get_deltas_from_global\n",
-    "    from generate_simulation_results import YAW_DEG, MIC_IDX\n",
+    "    from generate_simulation_results import AZIMUTH_DEG, MIC_IDX\n",
     "    \n",
     "    distances_cm = results_df.distance.unique()\n",
     "    deltas_m, d0 = get_deltas_from_global(\n",
-    "        distances_cm=distances_cm, mic_idx=MIC_IDX, azimuth_deg=YAW_DEG\n",
+    "        distances_cm=distances_cm, mic_idx=MIC_IDX, azimuth_deg=AZIMUTH_DEG\n",
     "    )\n",
     "    alpha0 = 1 / (4 * np.pi * d0)\n",
     "    alpha1 = (1 - WALL_ABSORPTION) / (4 * np.pi * (deltas_m + d0))\n",
@@ -1420,7 +1420,7 @@
     "            aggfunc=np.nanmean,\n",
     "            vmax=30,\n",
     "        )\n",
-    "        axs[0, 0].set_title(f\"{labels[method]}, amplitude noise [-]: {sigma_y}\")\n",
+    "        axs[0, 0].set_title(f\"amplitude noise [-]: {sigma_y}\")\n",
     "        save_fig(\n",
     "            fig,\n",
     "            f'plots/simulation/{name}_{method}_{str(sigma_y).replace(\".\",\"-\")}_mean.pdf',\n",
