Start epuck evaluation

--- a/python/CleanupAnalysis.ipynb
+++ b/python/CleanupAnalysis.ipynb
@@ -39,19 +39,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#exp_name = \"2021_04_30_stepper\";   # new hardware\n",
-    "#exp_name = \"2021_06_09_stepper\";  # new hardware, new sweep\n",
-    "#exp_name = \"2021_06_17_stepper\";  # new hardware, new sweep\n",
-    "#exp_name = \"2021_06_19_stepper\";  # new hardware, new sweep\n",
     "#exp_name = \"2021_07_08_stepper_fast\";  # new hardware, new sweep\n",
-    "exp_name = \"2021_07_08_stepper_slow\";  # new hardware, new sweep\n",
-    "#exp_name = \"2021_02_23_wall\";  # old buzzer\n",
-    "#exp_name = \"2021_02_25_wall\"\n",
+    "#exp_name = \"2021_07_08_stepper_slow\";  # new hardware, new sweep\n",
+    "exp_name = \"2021_07_27_epuck_wall\";  # new hardware, new sweep\n",
     "# new buzzer\n",
     "\n",
-    "mic_type = \"audio_deck\"\n",
-    "motors = \"all45000\"\n",
+    "#motors = \"all45000\"\n",
     "bin_selection = 5\n",
+    "\n",
+    "mic_type = \"audio_deck\" \n",
+    "motors = \"sweep_and_move\" \n",
+    "bin_selection = 0\n",
     "\n",
     "source = \"sweep_new\"\n",
     "fname = f'plots/experiments/{exp_name}_{motors}_{bin_selection}'"
@@ -86,12 +84,16 @@
    "outputs": [],
    "source": [
     "print(data.frequencies_matrix.shape)\n",
+    "print(data.stft.shape)\n",
     "for i in range(data.frequencies_matrix.shape[0]):\n",
     "    plt.figure()\n",
     "    plt.title(f'sweep{i}')\n",
     "    plt.scatter(range(data.frequencies_matrix.shape[1]), data.frequencies_matrix[i, :])\n",
     "    plt.xlabel('time idx')\n",
-    "    plt.ylabel('chosen frequency [Hz]')"
+    "    plt.ylabel('chosen frequency [Hz]')\n",
+    "    \n",
+    "    plt.figure()\n",
+    "    plt.plot(data.frequencies_matrix[i, :], np.abs(data.stft[i, 0]))"
    ]
   },
   {
@@ -123,7 +125,8 @@
     "from plotting_tools import pcolorfast_custom, add_colorbar, save_fig\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(5, 3)\n",
-    "im = pcolorfast_custom(ax, data.seconds, freqs[freqs>0], np.abs(spec[freqs>0, 0, :]))#, vmin=1e-5)\n",
+    "spec = np.abs(spec[freqs>0, 0, :])\n",
+    "im = pcolorfast_custom(ax, data.seconds, freqs[freqs>0], np.log10(spec))#, vmin=1e-5)\n",
     "add_colorbar(fig, ax, im)\n",
     "xticks = np.arange(0, max(data.seconds), step=5) \n",
     "ax.set_xticks(xticks)\n",
@@ -153,6 +156,7 @@
     "from data_collector import DataCollector\n",
     "\n",
     "data_collector = DataCollector(exp_name, mic_type)\n",
+    "print(data_collector.params)\n",
     "backup_exists = data_collector.fill_from_backup(\n",
     "    exp_name, mic_type, motors, bin_selection, appendix=\"_raw\"\n",
     ")\n",
@@ -218,9 +222,9 @@
     "        cmap='tab10'\n",
     "    )\n",
     "    ax.set_yscale('log')\n",
-    "    min_y = max(data_collector.df.magnitude.min(), 1e-2)\n",
-    "    max_y = min(data_collector.df.magnitude.max(), 200)\n",
-    "    ax.set_ylim(min_y, max_y)\n",
+    "    #min_y = max(data_collector.df.magnitude.min(), 1e-2)\n",
+    "    #max_y = min(data_collector.df.magnitude.max(), 200)\n",
+    "    #ax.set_ylim(min_y, max_y)\n",
     "    ax.legend(loc='lower center', ncol=1)"
    ]
   },
