--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -27,15 +27,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Notes for below experiments\n",
-    "\n",
-    "try frequency range with all-high gains, potentailly with smaller spacing. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -87,27 +78,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exp_name = '2021_02_09_wall_tukey';\n",
-    "# exp_name = '2021_02_09_wall';\n",
-    "\n",
-    "#exp_name = \"2021_02_23_wall\";  # old buzzer\n",
-    "#exp_name = \"2021_02_25_wall\"; # new buzzer\n",
-    "#exp_name = \"2021_04_30_stepper\"; # new hardware\n",
-    "#exp_name = \"2021_06_09_stepper\"; # new hardware, new sweep\n",
-    "#exp_name = \"2021_06_17_stepper\"; # new sweep\n",
-    "#exp_name = \"2021_06_19_stepper\"; # new sweep, better pipeline\n",
-    "#exp_name = \"2021_07_07_stepper\"; # new sweep, better pipeline\n",
-    "#exp_name = \"2021_07_08_stepper\"; # new sweep, better pipeline\n",
-    "exp_name = \"2021_07_08_stepper_fast\"; # new sweep, better pipeline\n",
-    "#exp_name = \"2021_07_08_stepper_slow\"; # new sweep, better pipeline\n",
-    "#exp_name = \"2021_03_01_flying\"\n",
-    "# exp_name = '2020_12_9_rotating';\n",
-    "# exp_name = '2020_11_26_wall';\n",
-    "# fname = f'results/{exp_name}_real.pkl'\n",
+    "#exp_name = \"2021_07_08_stepper_fast\"; # new sweep, better pipeline\n",
+    "exp_name = \"2021_07_27_epuck_wall\"; # new sweep, better pipeline\n",
     "\n",
     "mic_type = \"audio_deck\"\n",
-    "motors = 0 #\"all45000\"\n",
-    "snr = 5"
+    "motors = \"sweep_and_move\" #0 #\"all45000\"\n",
+    "snr = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_pickle(f\"../experiments/{exp_name}/all_data.pkl\")\n",
+    "df"
    ]
   },
   {
@@ -157,6 +143,7 @@
     "    df = df.assign(magnitude_norm=df.magnitude/df.groupby('frequency').magnitude.transform('median'))\n",
     "    z_series = df.groupby(['frequency', 'distance']).magnitude_norm.median()\n",
     "    z = z_series.values\n",
+    "    print(z_series)\n",
     "    x = z_series.index.get_level_values('distance').values\n",
     "    y = z_series.index.get_level_values('frequency').values\n",
     "    interpolator2d = scipy.interpolate.interp2d(x, y, z, kind=kind)\n",
