First evaluation epuck

--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -35,15 +35,20 @@
     "from simulation import get_setup\n",
     "from plotting_tools import save_fig\n",
     "from geometry import Context\n",
+    "from constants import PLATFORM\n",
     "\n",
-    "from crazyflie_description_py.experiments import WALL_ANGLE_DEG_STEPPER\n",
+    "if PLATFORM == \"crazyflie\":\n",
+    "    from crazyflie_description_py.experiments import WALL_ANGLE_DEG_STEPPER\n",
+    "else:\n",
+    "    print(\"epuck\")\n",
+    "    from epuck_description_py.experiments import WALL_ANGLE_DEG_STEPPER\n",
     "\n",
     "plot_dir = 'plots/experiments'\n",
     "\n",
     "distance = 15\n",
     "azimuth_deg = WALL_ANGLE_DEG_STEPPER #- 180\n",
     "\n",
-    "context = Context.get_crazyflie_setup()\n",
+    "context = Context.get_platform_setup()\n",
     "context.plot()\n",
     "\n",
     "fig, ax = plt.subplots()\n",
@@ -89,16 +94,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_pickle(f\"../experiments/{exp_name}/all_data.pkl\")\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -133,7 +128,9 @@
     "kind = 'cubic' #'cubic' #'linear'\n",
     "\n",
     "df_matrix, df_dist, df_freq = data_collector.get_df_matrix()\n",
+    "print(df_dist)\n",
     "\n",
+    "# interpolation study\n",
     "for mic, df in data_collector.df.groupby('mic'):\n",
     "    \n",
     "    df = df.sort_values(['distance', 'frequency'], inplace=False)\n",
@@ -465,8 +462,6 @@
     "from simulation import get_df_theory\n",
     "from data_collector import normalize_df_matrix\n",
     "\n",
-    "chosen_mics = range(4)\n",
-    "\n",
     "results = pd.DataFrame(columns=[\"normalization\", \"matrix\", \"values\"])\n",
     "method_dict = {\n",
     "    'raw': \"\",\n",
@@ -483,7 +478,7 @@
     "    #'calibration-offline-old': calib_function_old,\n",
     "}\n",
     "\n",
-    "df_theory_pruned = get_df_theory(df_freq, df_dist, chosen_mics=chosen_mics)\n",
+    "df_theory_pruned = get_df_theory(df_freq, df_dist)\n",
     "\n",
     "for j, (key, method) in enumerate(method_dict.items()):\n",
     "    values = None\n",
@@ -601,8 +596,9 @@
     "\n",
     "distances_grid = np.arange(min(df_dist), max(df_dist))\n",
     "distances = df_dist\n",
-    "mic_indices = range(4)\n",
-    "n_mics = len(mic_indices)\n",
+    "\n",
+    "chosen_mics = range(4) #[0, 1, 3] #range(4)\n",
+    "n_mics = len(chosen_mics)\n",
     "\n",
     "use_uniform_prior = False  #True #False\n",
     "\n",
@@ -622,25 +618,24 @@
     "            if method == \"theoretical\":\n",
     "                slice_exp = get_freq_slice_theory(df_freq,\n",
     "                                                  distance,\n",
-    "                                                  chosen_mics=mic_indices,\n",
-    "                                                  azimuth_deg=azimuth_deg)\n",
+    "                                                  azimuth_deg=azimuth_deg, \n",
+    "                                                  chosen_mics=chosen_mics)\n",
     "                slice_exp = slice_exp.T # now it's 4x32\n",
     "                freqs = df_freq\n",
     "            else:\n",
     "                slice_exp, freqs, stds = data_collector.get_frequency_slice_fixed(\n",
     "                    df_freq,\n",
     "                    distance,\n",
-    "                    mics=mic_indices)\n",
-    "                \n",
-    "            inf_machine.add_data(slice_exp, df_freq)\n",
+    "                    mics=chosen_mics)\n",
+    "            inf_machine.add_data(slice_exp, df_freq, mics=chosen_mics)\n",
     "            inf_machine.filter_out_freqs()\n",
     "            inf_machine.add_calibration_function(normalize_method)\n",
     "                \n",
-    "            for mic_idx in mic_indices:\n",
-    "                distances_bayes, proba_bayes_norm, diff_bayes = inf_machine.do_inference(algorithm=\"bayes\", mic_idx=mic_idx)\n",
+    "            for i_mic, mic_idx in enumerate(chosen_mics):\n",
+    "                distances_bayes, proba_bayes_norm, diff_bayes = inf_machine.do_inference(algorithm=\"bayes\", mic_idx=i_mic)\n",
     "                \n",
     "                for algo in [\"cost\", \"bayes\"]:\n",
-    "                    distances_here, proba, diff = inf_machine.do_inference(algorithm=algo, mic_idx=mic_idx)\n",
+    "                    distances_here, proba, diff = inf_machine.do_inference(algorithm=algo, mic_idx=i_mic)\n",
     "                    d = get_estimate(distances_here, proba)\n",
     "                    err_df.loc[len(err_df), :] = {\n",
     "                        'error': d - distance,\n",
@@ -712,7 +707,7 @@
     "        axs[0, 1].set_xlim(-1, max(distances))\n",
     "        \n",
     "        fname_here = f\"{plot_dir}/{fname}_{key}_mic{mic}_frequency_performance.png\"\n",
-    "        #save_fig(fig, fname_here)"
+    "        save_fig(fig, fname_here)"
    ]
   },
   {
