Finalize epuck results

--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -40,7 +40,6 @@
     "if PLATFORM == \"crazyflie\":\n",
     "    from crazyflie_description_py.experiments import WALL_ANGLE_DEG_STEPPER\n",
     "else:\n",
-    "    print(\"epuck\")\n",
     "    from epuck_description_py.experiments import WALL_ANGLE_DEG_STEPPER\n",
     "\n",
     "plot_dir = 'plots/experiments'\n",
@@ -67,7 +66,7 @@
     "ax.add_artist(l1)\n",
     "ax.set_xlabel(\"x [m]\")\n",
     "ax.set_ylabel(\"y [m]\")\n",
-    "save_fig(fig, f'{plot_dir}/setup.pdf')"
+    "save_fig(fig, f'{plot_dir}/setup_{PLATFORM}.pdf')"
    ]
   },
   {
@@ -299,6 +298,7 @@
     "\n",
     "d1 = df_dist[-1] # starting distance of distance slice. \n",
     "rel_movement_cm = df_dist[1]-df_dist[0]\n",
+    "print(df_dist)\n",
     "print(rel_movement_cm)\n",
     "factors = {mic:factor_distance_to_delta(d1, \n",
     "                                        rel_movement_cm, \n",
@@ -327,12 +327,13 @@
     "from plotting_tools import plot_performance, save_fig, titles, linestyles\n",
     "from estimators import get_estimate, AngleEstimator\n",
     "\n",
-    "plot_slices = False\n",
+    "plot_slices = True\n",
+    "gamma_min = 30\n",
     "\n",
-    "start_distances_grid = [max(df_dist) + i for i in [0, 10, 20]]\n",
-    "gammas_grid = np.arange(1, 90, step=1)\n",
+    "start_distances_grid = [max(df_dist)+10] #[max(df_dist) + i for i in [0, 10, 20]]\n",
+    "gammas_grid = np.arange(gamma_min, 91, step=1)\n",
     "\n",
-    "factor = 2 #average #2\n",
+    "factor = 2.0 #average #2\n",
     "gt_gamma = 90 # in degrees\n",
     "\n",
     "fig, ax_total = plt.subplots()\n",
@@ -341,13 +342,17 @@
     "ax_total.set_title('combined distribution across mics and frequencies')\n",
     "\n",
     "#for algo in [\"bayes\"]#[\"cost\", \"bayes\"]:\n",
-    "algo = \"bayes\"\n",
+    "#algo = \"cost\" #\"bayes\"\n",
+    "algo = \"bayes\" #\"bayes\"\n",
     "    \n",
     "estimator_all = AngleEstimator()\n",
     "\n",
     "labels = [\"all mics\"] + [f\"mic{m}\" for m in range(df_matrix.shape[0])] \n",
     "err_dict = {l: [np.nan]*len(df_freq) for l in labels}\n",
     "for i, f in enumerate(df_freq):\n",
+    "    \n",
+    "    if f < 3000: continue\n",
+    "        \n",
     "    estimator = AngleEstimator()\n",
     "\n",
     "    d_slices = fill_nans(df_matrix[:, i, :], df_dist)\n",
@@ -360,11 +365,11 @@
     "\n",
     "        if algo == \"bayes\":\n",
     "            ratios, prob_ratios = get_approach_angle_fft(d_slice, f, df_dist,\n",
-    "                                                 n_max=1000, bayes=True, reduced=False)\n",
+    "                                                 n_max=1000, bayes=True, reduced=False, \n",
+    "                                                factor=factor)\n",
     "\n",
-    "            gammas, prob = get_gamma_distribution(ratios, \n",
-    "                                                  prob_ratios, \n",
-    "                                                  factor=factor)\n",
+    "            gammas, prob = get_gamma_distribution(deepcopy(ratios), \n",
+    "                                                  deepcopy(prob_ratios))\n",
     "                                                  #factors[mic_idx])\n",
     "\n",
     "        elif algo == \"cost\":\n",
@@ -378,16 +383,20 @@
     "                azimuth_deg=azimuth_deg\n",
     "            )  # is of shape n_start_distances x n_gammas_grid\n",
     "            gammas = gammas_grid\n",
+    "            \n",
+    "        prob = prob[gammas > gamma_min]\n",
+    "        gammas = gammas[gammas > gamma_min]\n",
     "\n",
     "        estimator_all.add_distribution(gammas, prob, mic_idx, f)\n",
     "        estimator.add_distribution(gammas, prob, mic_idx, f)\n",
     "\n",
     "        gamma = get_estimate(gammas, prob)\n",
+    "        \n",
     "        err_dict[f\"mic{mic_idx}\"][i] = gamma - gt_gamma\n",
     "\n",
     "        if plot_slices:\n",
-    "            ax.plot(gammas, prob)\n",
-    "            ax.axvline(gamma, label=f'mic{mic_idx}, {algo}', color=f'C{mic_idx}', ls=linestyles[algo])\n",
+    "            ax.plot(ratios, prob_ratios)\n",
+    "            ax.axvline(1.0, label=f'mic{mic_idx}, {algo}', color=f'C{mic_idx}', ls=linestyles[algo])\n",
     "\n",
     "    if plot_slices:\n",
     "        ax.set_title(f'frequency {f:.0f}Hz')\n",
@@ -407,9 +416,10 @@
     "fig, axs = plot_performance(err_dict, xs=df_freq, \n",
     "           xlabel=\"frequency [Hz]\", ylabel=\"error [deg]\")\n",
     "fig.suptitle(titles[algo])\n",
-    "axs[0, 1].set_xlim(0,  45)\n",
-    "axs[0, 0].set_ylim(-45,  45)\n",
-    "#save_fig(fig, f'{plot_dir}/{fname}_{algo}_distance_slice_performance.pdf')\n",
+    "max_err = 90 #45\n",
+    "axs[0, 1].set_xlim(0,  max_err)\n",
+    "axs[0, 0].set_ylim(-max_err, max_err)\n",
+    "save_fig(fig, f'{plot_dir}/{fname}_{algo}_distance_slice_performance.pdf')\n",
     "\n",
     "ax_total.legend()"
    ]
@@ -509,8 +519,8 @@
    "source": [
     "from plotting_tools import plot_df_matrix, save_fig, titles\n",
     "\n",
-    "min_freq = min(df_freq)\n",
-    "max_freq = max(df_freq)\n",
+    "min_freq = 3100 #min(df_freq)\n",
+    "max_freq = 5000 #max(df_freq)\n",
     "\n",
     "min_value = None\n",
     "max_value = None\n",
@@ -773,7 +783,7 @@
     "\n",
     "    distance_estimators = {k: DistanceEstimator() for k in chosen_methods}\n",
     "\n",
-    "    for i_mic, mic_idx in enumerate(mic_indices):\n",
+    "    for i_mic, mic_idx in enumerate(chosen_mics):\n",
     "        for i_method, method in enumerate(chosen_methods):\n",
     "            if method == \"theoretical\":\n",
     "                slice_exp = get_freq_slice_theory(\n",
