Start pre-analysis crazyflie

--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -82,12 +82,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#exp_name = \"2021_07_08_stepper_fast\"; # new sweep, better pipeline\n",
-    "exp_name = \"2021_07_27_epuck_wall\"; # new sweep, better pipeline\n",
+    "exp_name = \"2021_07_08_stepper_fast\"; # new sweep, better pipeline\n",
+    "\n",
+    "#exp_name = \"2021_07_27_epuck_wall\"; # new sweep, better pipeline\n",
+    "# motors = \"sweep_and_move\" #0 #\"all45000\"\n",
     "\n",
     "mic_type = \"audio_deck\"\n",
-    "motors = \"sweep_and_move\" #0 #\"all45000\"\n",
-    "snr = 0"
+    "motors = 0\n",
+    "snr = 5"
    ]
   },
   {
@@ -449,18 +451,21 @@
     "from calibration import get_calibration_function_fit\n",
     "from calibration import get_calibration_function_median\n",
     "\n",
-    "fig, axs = plt.subplots(1, 2, sharey=True)\n",
-    "fig.set_size_inches(10, 5)\n",
-    "calib_function_median, freqs = get_calibration_function_median(exp_name, mic_type, snr=snr, ax=axs[0])\n",
-    "axs[0].set_title(\"calibration-individual\")\n",
+    "for motors in [0, \"all45000\"]:\n",
+    "    fig, axs = plt.subplots(1, 2, sharey=True)\n",
+    "    fig.set_size_inches(10, 5)\n",
+    "    calib_function_median, freqs = get_calibration_function_median(\n",
+    "        exp_name, mic_type, snr=snr, ax=axs[0], motors=motors\n",
+    "    )\n",
+    "    axs[0].set_title(\"calibration-individual\")\n",
     "\n",
-    "calib_function_median_one, freqs = get_calibration_function_median(\n",
-    "    exp_name, mic_type, ax=axs[1], fit_one_gain=True, snr=snr\n",
-    ")\n",
-    "axs[1].set_title(\"calibration-global\")\n",
-    "axs[1].set_ylabel('')\n",
-    "axs[1].legend().set_visible(False)\n",
-    "save_fig(fig, f'{plot_dir}/{fname}_calibration_median.pdf')"
+    "    calib_function_median_one, freqs = get_calibration_function_median(\n",
+    "        exp_name, mic_type, ax=axs[1], fit_one_gain=True, snr=snr, motors=motors\n",
+    "    )\n",
+    "    axs[1].set_title(\"calibration-global\")\n",
+    "    axs[1].set_ylabel('')\n",
+    "    axs[1].legend().set_visible(False)\n",
+    "    save_fig(fig, f'{plot_dir}/{fname}_calibration_median_{motors}.pdf')"
    ]
   },
   {
@@ -604,7 +609,6 @@
     "inf_machine = Inference()\n",
     "inf_machine.add_geometry([min(df_dist), max(df_dist)], azimuth_deg)\n",
     "\n",
-    "distances_grid = np.arange(min(df_dist), max(df_dist))\n",
     "distances = df_dist\n",
     "\n",
     "chosen_mics = range(4) #[0, 1, 3] #range(4)\n",
